# MyYak

./: .gitignore  README.md
backend/myyak/: .env.example  get_medicines.py  get_prescriptions.py  interaction.py  make_notices.py  manage.py  requirements.txt  responses.py  socket_server.py
backend/myyak/accounts/: models.py  serializers.py  urls.py  views.py
backend/myyak/accounts/migrations/: 0001_initial.py  0002_remove_user_first_name_remove_user_last_name.py  0003_user_user_realname.py
backend/myyak/bookmarks/: urls.py  views.py
backend/myyak/cases/: models.py  serializers.py  urls.py  views.py
backend/myyak/cases/migrations/: 0001_initial.py
backend/myyak/medicines/: models.py  serializers.py  urls.py  views.py
backend/myyak/medicines/migrations/: 0001_initial.py  0002_ingredient_prescription.py  0003_medicine_med_ingr_prescription_pre_ingr.py  0004_alter_ingredient_ingr_id.py  0005_alter_ingredient_ingr_name.py  0006_alter_ingredient_ingr_name.py  0007_medicine_med_barcode.py  0008_alter_medicine_med_barcode.py  (+2 more)
backend/myyak/myyak/: __init__.py  apps.py  asgi.py  globals.py  settings.py  urls.py  wsgi.py
backend/myyak/notices/: models.py  serializers.py  urls.py  views.py
embedded/: CMakeLists.txt  common.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  make.sh  motor.cpp  qtmain.cpp  serial.cpp
embedded/includes/: common.hpp  motor.hpp  qtmain.hpp  serial.hpp
frontend/myyak/: package-lock.json  package.json
frontend/myyak/public/: index.html  manifest.json
frontend/myyak/src/: App.js  index.js  rootReducer.js  store.js
(+82 files in other folders)
